[metadata]
name = mailserver-admin
description = Webapp to manage mail server domains, users and aliases.
version = attr: mailserveradmin.__version__
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
author = Cyrille Pontvieux
author_email = cyrille@enialis.net
url = https://github.com/jrd/mailserver-admin
project_urls =
    Source = https://github.com/jrd/mailserver-admin
    Docker = https://hub.docker.com/repository/docker/jrdasm/mailserver-admin
# https://pypi.org/classifiers/
classifiers =
    # Development Status :: 5 - Production/Stable
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django :: 3.1
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Communications :: Email
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: System :: Systems Administration
keywords = email mail domain admin

[options]
python_requires = >=3.9
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    django = mailserveradmin.config.django:main

[flake8]
max-line-length = 120
exclude = build,.git
